--- a/index.css
+++ b/index.css
@@ -13,17 +13,21 @@ body {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px white;
+    background: url(backgroung.PNG);background-repeat: no-repeat;background-size: cover;
+    background-position: center;
+    
 }
 
 .head {
     text-align: center;
     margin-bottom: 20px;
     text-shadow: 1px 1px 2px black;padding-right: 10px;
+    color: rgb(0, 0, 66);
 }
 
 .span {
-    color: #008111;
-    font-size: 1.8em;
+    color:rgb(16, 16, 92);font-weight: bold;
+    font-size: 1.8em;text-shadow: 1px 1px 5px rgb(0, 0, 66);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -48,6 +52,7 @@ input[type="text"] {
     font-size: 1.2em;
     border: 1px solid #ccc;
     border-radius: 5px;
+    background: rgb(0, 0, 14);
 }
 
 .verif {
@@ -75,11 +80,11 @@ input[type="text"] {
     border-radius: 5px;
     cursor: pointer;
     width: 100px;
-    height: 40px;
+    height: 40px;color:rgb(16, 16, 92);font-weight: bold;
 }
 
 .button:hover {
-    background-color: #00850b;
+    background: rgb(0, 0, 66);
 }
 
 .feedback, .result {
