--- a/welcome.css
+++ b/welcome.css
@@ -20,17 +20,18 @@ body {
 }
 .text1 {
   font-size: 60px;
-  font-weight: 700;
+  font-weight: 1000;
   letter-spacing: 8px;
   margin-bottom: 20px;
-  color: white;
+  color: rgb(27, 5, 78);
   background-color: black;
   position: relative;
   animation: text 3s 1;
+  text-shadow: 1px 1px 5px rgb(0, 0, 66);
 }
 .text2 {
   font-size: 30px;
-  color: green;
+  color: rgb(0, 0, 66);
 }
 
 @keyframes text {
@@ -39,12 +40,12 @@ body {
     margin-bottom: -40%;
   }
   30% {
-    color: rgb(21, 102, 5);
+    color:rgb(27, 5, 78);
     letter-spacing: 30px;
     margin-bottom: -40px;
   }
   85% {
-    color: rgb(185, 173, 3);
+    color:rgb(0, 0, 66);
     letter-spacing: 8px;
     margin-bottom: -40px;
   }
