--- a/welcome.css
+++ b/welcome.css
@@ -18,6 +18,7 @@ body {
   width: 100%;
   transform: translate(-50%, -50%);
 }
+
 .text1 {
   font-size: 60px;
   font-weight: 1000;
@@ -29,6 +30,7 @@ body {
   animation: text 3s 1;
   text-shadow: 1px 1px 5px rgb(0, 0, 66);
 }
+
 .text2 {
   font-size: 30px;
   color: rgb(0, 0, 66);
@@ -48,5 +50,174 @@ body {
     color:rgb(0, 0, 66);
     letter-spacing: 8px;
     margin-bottom: -40px;
+  }
+}
+.pulsa {
+  animation: pulsa 1.4s infinite;
+  min-width: 200px;
+  width: fit-content;
+  border-radius: 9999px;
+  margin-left: 580px;
+  margin-top: 30px;
+  /* overflow: hidden; */
+}
+
+.cta {
+  width: 100%;
+  height: 100%;
+  border: none;
+  outline: none;
+  background-color: none;
+  border-radius: 9999px;
+  padding: 8px 16px;
+  color: white;
+  font-size: 15px;
+  background: linear-gradient(109.6deg, #0b0b8f 11.2%, #000138 53.7%, #090979 100.2%);
+  letter-spacing: 0.08em;
+  font-weight: 800;
+  position: relative;
+}
+
+.cta:active {
+  animation: pulsa-active .4s infinite;
+}
+
+.star {
+  width: 2px;
+  height: 2px;
+  background-color: white;
+  border-radius: 50%;
+  position: absolute;
+  animation: pulsa-stella 1.8s infinite;
+  transition: all .8s ease-in-out;
+}
+
+.star.a {
+  top: 8px;
+  left: 6px;
+}
+
+.star.b {
+  top: 2px;
+  left: 16px;
+}
+
+.star.c {
+  top: 18px;
+  left: 8px;
+}
+
+.star.d {
+  top: 14px;
+  left: 20px;
+}
+
+.star.e {
+  top: 30px;
+  left: 8px;
+}
+
+.star.f {
+  top: 24px;
+  left: 24px;
+}
+
+.star.g {
+  top: 10px;
+  left: 32px;
+}
+
+.pulsa:hover .star.a {
+  transform: translate3d(0px, 8px, 0);
+}
+
+.pulsa:hover .star.b {
+  transform: translate3d(-4px, 6px, 0);
+}
+
+.pulsa:hover .star.c {
+  transform: translate3d(14px, -8px, 0);
+}
+
+.pulsa:hover .star.d {
+  transform: translate3d(16px, -2px, 0);
+}
+
+.pulsa:hover .star.e {
+  transform: translate3d(58px, -20px, 0);
+}
+
+.pulsa:hover .star.f {
+  transform: translate3d(34px, 2px, 0);
+}
+
+.pulsa:hover .star.g {
+  transform: translate3d(10px, 16px, 0);
+}
+
+.rocket {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  z-index: -1;
+  transform: rotate(180deg);
+  transition: all .3s ease-in-out;
+}
+
+.pulsa:hover .rocket {
+  z-index: auto;
+  animation: muovi-razzo 1.8s linear;
+  transform: rotate(0deg);
+}
+
+@keyframes pulsa {
+  0% {
+    box-shadow: 0 0 0 0 #29002e;
+  }
+
+  100% {
+    box-shadow: 0 0 0 8px #21026901;
+  }
+}
+
+@keyframes pulsa-stella {
+  0% {
+    box-shadow: 0 0 0 0 #ffffff;
+  }
+
+  100% {
+    box-shadow: 0 0 0 4px #fbb32f01;
+  }
+}
+
+@keyframes muovi-razzo {
+  from {
+    transform: rotate(180deg);
+  }
+
+  25% {
+    transform: translate3d(40px, 32px, 0);
+  }
+
+  50% {
+    transform: translate3d(32px, -60px, 0);
+  }
+
+  75% {
+    transform: translate3d(0px, -60px, 0) rotate(0);
+  }
+
+  to {
+    transform: rotate(0deg);
+  }
+}
+
+@keyframes pulsa-active {
+  0% {
+    box-shadow: 0 0 0 0 #9006A1;
+  }
+
+  100% {
+    box-shadow: 0 0 0 16px #fbb32f01;
   }
 }
